# smolvm

./: .gitattributes  .gitmodules  AGENTS.md  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
crates/smolvm-agent/: Cargo.toml
crates/smolvm-agent/src/: container.rs  crun.rs  dns_proxy.rs  main.rs  oci.rs  paths.rs  process.rs  ssh_agent.rs  storage.rs
crates/smolvm-agent/src/network/: linux.rs  mod.rs
crates/smolvm-napi/: Cargo.toml
crates/smolvm-napi/src/: lib.rs  machine.rs  types.rs
crates/smolvm-network/: Cargo.toml
crates/smolvm-network/src/: guest_env.rs  lib.rs
crates/smolvm-pack/: Cargo.toml
crates/smolvm-pack/src/: assets.rs  extract.rs  format.rs
crates/smolvm-protocol/: Cargo.toml
crates/smolvm-protocol/src/: lib.rs
crates/smolvm-registry/: Cargo.toml
crates/smolvm-registry/src/: client.rs  pull.rs
crates/smolvm-smolfile/: Cargo.toml
crates/smolvm-smolfile/src/: lib.rs
docs/: DEVELOPMENT.md
examples/: README.md
examples/docker-in-vm/: docker.smolfile
examples/doom-web/: doom.smolfile
examples/gpu-chrome/: gpu-chrome.smolfile
examples/headless-browser/: browser.smolfile
examples/node-app/: node.smolfile
examples/openclaw-app/: openclaw.smolfile
examples/python-app/: python.smolfile
lib/: libMoltenVK.dylib  libepoxy.0.dylib  libkrun.dylib  libkrunfw.5.dylib  libvirglrenderer.1.dylib
lib/linux-x86_64/: libkrunfw.so.5
scripts/: build-agent-rootfs.sh  build-dist.sh  install.sh  rebuild-agent.sh  smolvm-wrapper.sh
sdks/: README.md
sdks/node/smolvm-embedded/: README.md  package.json  vitest.config.ts
sdks/node/smolvm-embedded/__tests__/: machine.test.ts
sdks/node/smolvm-embedded/examples/: basic.ts  create-and-start.ts
sdks/node/smolvm-embedded/integration-tests/: exec-and-files.test.ts  helpers.ts  images.test.ts  lifecycle.test.ts  network-and-mounts.test.ts  resources.test.ts
sdks/node/smolvm-embedded/src/: errors.ts  index.ts  machine.ts  types.ts
sdks/node/smolvm-embedded/src/presets/: node.ts  python.ts
src/: config.rs  db.rs  disk_utils.rs  lib.rs  log_rotation.rs  main.rs  process.rs  registry.rs  smolfile.rs  storage.rs  util.rs
src/agent/: boot_config.rs  client.rs  krun.rs  launcher.rs  launcher_dynamic.rs  manager.rs  mod.rs  state_probe.rs
src/api/: errors.rs  mod.rs  state.rs  supervisor.rs  types.rs  validation.rs
src/api/handlers/: containers.rs  exec.rs  images.rs  machines.rs  mod.rs
src/cli/: container.rs  internal_boot.rs  machine.rs  mod.rs  pack.rs  pack_run.rs  parsers.rs  serve.rs  smolfile.rs  vm_common.rs
src/data/: consts.rs  disk.rs  mod.rs  resources.rs
src/embedded/: control.rs  handle.rs  mod.rs  runtime.rs
src/network/: backend.rs  launch.rs  mod.rs  policy.rs
src/vm/: config.rs
src/vm/backend/: libkrun.rs
tests/: README.md  bench_container.sh  bench_vm_startup.sh  common.sh  run_all.sh  test_api.sh  test_cli.sh  test_container.sh  test_gpu.sh  test_machine.sh  test_pack.sh  test_resize.sh  test_smolfile.sh  test_virtio_net.sh  test_wrapper.sh
