[package]
name = "smolvm-agent"
version = "0.5.19"
edition = "2021"
description = "Guest agent for smolvm VMs (handles OCI operations and command execution)"
license = "Apache-2.0"

[[bin]]
name = "smolvm-agent"
path = "src/main.rs"

[dependencies]
smolvm-network = { path = "../smolvm-network" }
smolvm-protocol = { path = "../smolvm-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"

# Linux-specific dependencies for vsock
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["socket", "fs"] }
